--- a/src/components/Task/Task.css
+++ b/src/components/Task/Task.css
@@ -5,4 +5,7 @@
   margin-top: 10px;
   margin-bottom: 10px;
   padding: 5px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 }
