--- a/src/components/Task/Task.css
+++ b/src/components/Task/Task.css
@@ -6,6 +6,38 @@
   margin-bottom: 10px;
   padding: 5px;
   display: flex;
-  justify-content: flex-start;
   align-items: center;
+  opacity: 1;
+}
+
+.task-enter {
+  opacity: 0.01;
+  transform: translate(-40px, 0);
+}
+
+.task-enter-active {
+  opacity: 1;
+  transform: translate(0, 0);
+  transition: all 500ms ease-in;
+}
+
+.task-exit {
+  opacity: 1;
+  transform: translate(0, 0);
+}
+
+.task-exit-active {
+  opacity: 0.01;
+  transform: translate(40px, 0);
+  transition: all 500ms ease-in;
+}
+
+.task:hover > .task__exit-btn {
+  display: block;
+}
+
+.task__exit-btn {
+  display: none;
+  margin-left: auto;
+  margin-right: 5px;
 }
